fix baseline alignment of sign in with the GOV.UK logo

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -196,6 +196,7 @@ margin-bottom: 30px;
 
 .govuk-header__content {
   text-align: right;
+  padding-top: 9px;
 }
 
 .govuk-header__link--service-name {
